[package]
name = "barter_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barter = "0.7.1"
# Barter Ecosystem
barter-data = "0.3.2"

# Logging
tracing = "0.1.29"

# Async
tokio = { version = "1.14.0", features = ["sync"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
futures = "0.3.19"

# Error
thiserror = "1.0.30"

# SerDe
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# Persistence
redis = "0.20.0"

# Strategy
ta = "0.4.0"

# Misc
uuid = {version = "0.8", features = ["v4", "serde"]}
chrono = {version = "0.4.19", features = ["serde"]}
prettytable-rs = "0.8.0"
parking_lot = "0.12.0"
